--- a/group pages/member3.html
+++ b/group pages/member3.html
@@ -22,7 +22,7 @@
   <section class="member-course-detail">
     <div class="member-header">
       <div class="member-avatar-large">
-        <img src="C:/Users/27304/Desktop/group pages/member images/wdd.jpeg" alt="王东东头像">
+        <img src="member images/wdd.jpeg" alt="王东东头像">
       </div>
       <div class="member-basic-info">
         <h2>王东东的个人资料</h2>
