--- a/group pages/member4.html
+++ b/group pages/member4.html
@@ -143,7 +143,7 @@
     
     <div class="member-header" style="background: white; padding: 30px; border-radius: 12px; box-shadow: 0 4px 15px rgba(0,0,0,0.05); display: flex; align-items: center; gap: 30px; margin-bottom: 20px;">
       <div class="member-avatar-large">
-        <img src="repository_zs/zs.jpg" alt="张顺头像" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 4px solid #fff; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+        <img src="member images/zs.jpg" alt="张顺头像" style="width: 120px; height: 120px; border-radius: 50%; object-fit: cover; border: 4px solid #fff; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
       </div>
       <div class="member-basic-info">
         <h2 style="margin: 0 0 10px 0; color: #1e293b;">张顺 <span style="font-size: 0.9rem; color: #64748b; font-weight: normal;">(WebGIS 开发成员)</span></h2>
