--- a/group pages/member5.html
+++ b/group pages/member5.html
@@ -22,7 +22,7 @@
   <section class="member-course-detail">
     <div class="member-header">
       <div class="member-avatar-large">
-        <img src="C:/Users/27304/Desktop/group pages/member images/zzh.jpg" alt="赵子航头像">
+        <img src="member images/zzh.jpg" alt="赵子航头像">
       </div>
       <div class="member-basic-info">
         <h2>赵子航的修课记录</h2>
