--- a/group pages/member1.html
+++ b/group pages/member1.html
@@ -22,7 +22,7 @@
   <section class="member-course-detail">
     <div class="member-header">
       <div class="member-avatar-large">
-        <img src="C:/Users/27304/Desktop/group pages/member images/lk.jpeg" alt="黎可头像">
+        <img src="member images/lk.jpeg" alt="黎可头像">
       </div>
       <div class="member-basic-info">
         <h2>黎可的个人资料</h2>
