--- a/group pages/member2.html
+++ b/group pages/member2.html
@@ -22,7 +22,7 @@
   <section class="member-course-detail">
     <div class="member-header">
       <div class="member-avatar-large">
-        <img src="C:/Users/27304/Desktop/group pages/member images/sun.png" alt="孙鑫瑞头像">
+        <img src="member images/sun.png" alt="孙鑫瑞头像">
       </div>
       <div class="member-basic-info">
         <h2>孙鑫瑞的个人资料</h2>
