--- a/group pages/member4.html
+++ b/group pages/member4.html
@@ -230,7 +230,7 @@
       <div class="music-container">
         
         <div class="music-card">
-          <img src="repository_zs/dtmf.jpg" alt="DTMF 封面" class="music-cover" onerror="this.src='https://via.placeholder.com/60?text=Music'"> 
+          <img src="repository_zs/DtMF.jpg" alt="DTMF 封面" class="music-cover" onerror="this.src='https://via.placeholder.com/60?text=Music'"> 
           <div class="music-info">
             <h4>DTMF</h4>
             <p>Bad Bunny</p> 
